changed title case

--- a/tools.html
+++ b/tools.html
@@ -94,9 +94,17 @@ breadcrumb: Network tools
 
 		</div>
 
+		<div id="tab-ip-info" class="tabbed-content">
+
+			<h1>IP metadata</h1>
+			<p>Information about your IP address, courtesy of <a href="http://ipinfo.io" target="_blank" norel>http://ipinfo.io/</a></p>
+
+			<div id="ip-info"></div>
+		</div>
+
 		<div id="tab-passwords" class="tabbed-content">
 
-			<h1>Complex Passwords</h1>
+			<h1>Complex passwords</h1>
 			<p>Generate complex passwords of varying length and character compositions.</p>
 
 			<div>
@@ -108,14 +116,6 @@ breadcrumb: Network tools
 			<div id="randomPasswords"></div>
 			<div id="randomPasswordsError" class="apiErrorMessage"></div>
 
-		</div>
-
-		<div id="tab-ip-info" class="tabbed-content">
-
-			<h1>IP Metadata</h1>
-			<p>Information about your IP address, courtesy of <a href="http://ipinfo.io" target="_blank" norel>http://ipinfo.io/</a></p>
-
-			<div id="ip-info"></div>
 		</div>
 
 	</div>
