--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ breadcrumb: About
 <section class="boxed">
 
 	<h1 id="about-me" class="text-align-center">
-		Hi, I'm <a href="http://www.linkedin.com/profile/view?id=67596050" target="_blank">Marc</a>, a freelance C# developer, computer security analyst and infrastructure specialist based in <a href="http://maps.google.co.uk/maps?q=Wales">Wales, UK</a>.<br /><strike>I am available for hire</strike>.
+		Hi, I'm <a href="http://www.linkedin.com/profile/view?id=67596050" target="_blank">Marc</a>, a freelance C# developer, computer security analyst and infrastructure specialist based in <a href="http://maps.google.co.uk/maps?q=Wales">Wales, UK</a>.<!--<br /><strike>I am available for hire</strike>-->.
 	</h1>
 
 	<hr />
