--- a/open-source.html
+++ b/open-source.html
@@ -13,23 +13,27 @@ breadcrumb: Open Source
 	<ul class="tools">
 	
 		<li>
-			<h2><a target="_blank" href="https://github.com/pingfu/iis-remove-server-headers">pingfu/iis-remove-server-headers IIS Module</a></h2>
-			<p>Install to the GAC, removes unwanted http headers from IIS responses.</p>
-		</li>
-		
-		<li>
-			<h2><a target="_blank" href="https://gist.github.com/marcbarry/47644b4a43fbfb63ef54">Security hardening web.config</a></h2>
-			<p>A simple template to help harden asp.net applications.</p>
-		</li>
-		
-		<li>
 			<h2><a target="_blank" href="https://github.com/pingfu/blockchainsharp">Bitcoin block chain parser</a></h2>
 			<p>A pure C# block chain parser library for Bitcoin. It eats binary blkxxxx.dat files and produces an IEnumerable strongly typed in-memory representation.</p>
 		</li>
 		
 		<li>
+			<h2><a target="_blank" href="https://github.com/pingfu/r53export/">pingfu/r53export</a></h2>
+		</li>
+		
+		<li>
+			<h2><a target="_blank" href="https://github.com/pingfu/iis-remove-server-headers">pingfu/iis-remove-server-headers IIS Module</a></h2>
+			<p>Install to the GAC, removes unwanted http headers from IIS responses.</p>
+		</li>
+		
+		<li>
 			<h2><a target="_blank" href="https://gist.github.com/marcbarry/96470e5424bfa2ffd193">simple-aes.cs</a></h2>
-			<p>Proof-of-concept code used, among other things, to decrypt DRM protected content referenced in m3u8 playlists.</p>
+			<p>Unsalted AES256 reference code, to aid decryption of DRM protected content referenced in m3u8 playlists.</p>
+		</li>
+		
+		<li>
+			<h2><a target="_blank" href="https://gist.github.com/marcbarry/47644b4a43fbfb63ef54">Security hardening web.config</a></h2>
+			<p>A simple template to help harden asp.net web applications.</p>
 		</li>
 		
 	</ul>
