updated r53export description

--- a/open-source.html
+++ b/open-source.html
@@ -19,6 +19,7 @@ breadcrumb: Open Source
 		
 		<li>
 			<h2><a target="_blank" href="https://github.com/pingfu/r53export/">pingfu/r53export</a></h2>
+			<p>A simple tool to easily export information from Route53. Periodically snapshot, or backup DNS data from ALL hosted zones.</p>
 		</li>
 		
 		<li>
