--- a/open-source.html
+++ b/open-source.html
@@ -13,17 +13,23 @@ breadcrumb: Open Source
 	<ul class="tools">
 	
 		<li>
-			<h2><a target="_blank" href="https://github.com/pingfu/blockchainsharp">Bitcoin block chain parser</a></h2>
+			<h2>
+				<a target="_blank" href="https://ci.appveyor.com/project/Pingfu/blockchainsharp"><img style="vertical-align: sub;" src="https://ci.appveyor.com/api/projects/status/github/Pingfu/blockchainsharp?branch=master&svg=true" alt="Build Status"></a> 
+				<a target="_blank" href="https://github.com/pingfu/blockchainsharp">Bitcoin block chain parser</a>
+			</h2>
 			<p>A pure C# block chain parser library for Bitcoin. It eats binary blkxxxx.dat files and produces an IEnumerable strongly typed in-memory representation.</p>
 		</li>
 		
 		<li>
-			<h2><a target="_blank" href="https://github.com/pingfu/r53export/">pingfu/r53export</a></h2>
+			<h2>
+				<a target="_blank" href="https://ci.appveyor.com/project/Pingfu/r53export"><img style="vertical-align: sub;" src="https://ci.appveyor.com/api/projects/status/github/Pingfu/r53export?branch=master&svg=true" alt="Build Status"></a> 
+				<a target="_blank" href="https://github.com/pingfu/r53export/">Amazon Route53 data export</a>
+			</h2>
 			<p>A simple tool to easily export information from Route53. Periodically snapshot, or backup DNS data from ALL hosted zones.</p>
 		</li>
 		
 		<li>
-			<h2><a target="_blank" href="https://github.com/pingfu/iis-remove-server-headers">pingfu/iis-remove-server-headers IIS Module</a></h2>
+			<h2><a target="_blank" href="https://github.com/pingfu/iis-remove-server-headers">IIS remove server headers module</a></h2>
 			<p>Install to the GAC, removes unwanted http headers from IIS responses.</p>
 		</li>
 		
