--- a/open-source.html
+++ b/open-source.html
@@ -56,6 +56,12 @@ breadcrumb: Open Source
 	<p>A few perhaps less well known, but exceptional projects I've had the pleasure of discovering.</p>
 
 	<ul class="tools">
+	
+		<li>
+			<h2><a target="_blank" href="http://shout-irc.com/">Shout-IRC</a></h2>
+			<p>Gorgeous self-hosted IRC web client.</p>
+		</li>
+		
 		<li>
 			<h2><a target="_blank" href="http://www.secdev.org/projects/scapy/">Scapy</a></h2>
 			<p>A fantastically capable tool for crafting packets by hand.</p>
