corrected spelling mistake

--- a/open-source.html
+++ b/open-source.html
@@ -75,7 +75,7 @@ breadcrumb: Open Source
 
 		<li>
 			<h2><a target="_blank" href="https://cesanta.com/mongoose.shtml">Mongoose</a></h2>
-			<p>A powerful asyncronouns, non-blocking web server designed for use in embedded systems. Supports CGI, SSL, Digest auth, Websocket, WebDAV, Resumed download, URL rewrite, file blacklist, IP-based ACL, and available as a <a target="_blank" href="https://github.com/cesanta/mongoose/blob/master/mongoose.c">single file</a>.
+			<p>A powerful asynchronous, non-blocking web server designed for use in embedded systems. Supports CGI, SSL, Digest auth, Websocket, WebDAV, Resumed download, URL rewrite, file blacklist, IP-based ACL, and available as a <a target="_blank" href="https://github.com/cesanta/mongoose/blob/master/mongoose.c">single file</a>.
 			</p>
 		</li>
 		
