added a new project

--- a/open-source.html
+++ b/open-source.html
@@ -8,7 +8,7 @@ breadcrumb: Open Source
 
 	<h1>Open source</h1>
 	
-	<p>A collection of links to a few home grown tools.</p>
+	<p>A few home grown tools.</p>
 
 	<ul class="tools">
 	
@@ -57,6 +57,11 @@ breadcrumb: Open Source
 
 	<ul class="tools">
 	
+		<li>
+			<h2><a target="_blank" href="http://12factor.net/">The Tewlve-Factor App</a></h2>
+			<p>A simple methodology for building software-as-a-service apps.</p>
+		</li>
+		
 		<li>
 			<h2><a target="_blank" href="http://shout-irc.com/">Shout-IRC</a></h2>
 			<p>Gorgeous self-hosted IRC web client.</p>
