removed old reference to business impact levels

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ breadcrumb: About
 	
 	<ul>
 		<li>C# software development, code review, performance optimisation and penetration testing.</li>
-		<li>Enterprise and n-tier or SOA architectures, infrastructure stacks, security accreditation and compliance upto and including IL3.</li>
+		<li>Enterprise and n-tier or SOA architectures, infrastructure stacks, security accreditation and compliance.</li>
 		<li>Applied cryptography, secure password storage, ECDHE, PKCS and PKI, trust frameworks, real-world testing / implementation / validation.</li>
 		<li>Security incident detection, response, handling and recovery, policy, assurance and accreditation. (ISO27001 &amp; PCI)</li>
 		<li>Backend systems, data storage strategies, horizontally scaled infrastructure build, configure and deploy on bare-metal and cloud (AWS, Azure, Rackspace).</li>
