cleaning up bullet points

--- a/about.html
+++ b/about.html
@@ -16,14 +16,13 @@ breadcrumb: About
 	<br />
 	
 	<ul>
-		<li>C# software development, code review, performance optimisation and penetration testing.</li>
-		<li>Enterprise and n-tier or SOA architectures, infrastructure stacks, security accreditation and compliance.</li>
-		<li>Applied cryptography, secure password storage, ECDHE, PKCS and PKI, trust frameworks, real-world testing / implementation / validation.</li>
-		<li>Security incident detection, response, handling and recovery, policy, assurance and accreditation. (ISO27001 &amp; PCI)</li>
-		<li>Backend systems, data storage strategies, horizontally scaled infrastructure build, configure and deploy on bare-metal and cloud (AWS, Azure, Rackspace).</li>
-		<li>Modern front end technologies like javascript, responsive-web-design and HTML5.</li>
-		<li>Voice over IP system installation and debugging (SIP &amp; IAX / Asterisk).</li>
-		<li>Devops and sysops culture and tooling.</li>
+		<li>C# software development, code review, performance optimisation and security penetration testing.</li>
+		<li>Security incident detection, handling, response and recovery, policy, assurance, accreditation and compliance. (ISO27001 &amp; PCI)</li>
+		<li>Applied cryptography, best practice deployment, ECDHE, PKCS and PKI trust frameworks, real-world testing, implementation and validation.</li>
+		<li>Enterprise and n-tier or SOA architectures, api design, data storage strategies and horizontally scalable infrastructure.</li>
+		<li>Backend infrastructure stacks, automation, devops and sysops culture and tooling.</li>
+		<li>Voice over IP system planning, deployment and debugging (SIP &amp; IAX / Asterisk).</li>
+		<li>Modern front end javascript frameworks and responsive-design.</li>
 		<li>Technical document writing.</li>
 	</ul>
 
