hid your address is paragraph

--- a/tools.html
+++ b/tools.html
@@ -11,8 +11,8 @@ redirect_from: "/dns/"
 
 	<h1>{{ page.breadcrumb }}</h1>
 	
-	<p>Your public IP address appears to be <span class="userip userip-styled"></span></p>
-	<br />
+	<!--<p>Your public IP address appears to be <span class="userip userip-styled"></span></p>
+	<br />-->
 	
 	<div id="tabs">
 
