renamed tab title

--- a/tools.html
+++ b/tools.html
@@ -107,7 +107,7 @@ redirect_from: "/dns/"
 
 		<div id="tab-passwords" class="tabbed-content">
 
-			<h1>Complex passwords</h1>
+			<h1>Passwords</h1>
 			<p>Generate complex passwords of varying length and character compositions.</p>
 
 			<div>
