changed button wording

--- a/tools.html
+++ b/tools.html
@@ -111,7 +111,7 @@ redirect_from: "/dns/"
 			<p>Generate complex passwords of varying length and character compositions.</p>
 
 			<div>
-				<button id="loadPasswords" type="button">Generate another set ...</button>
+				<button id="loadPasswords" type="button">Generate a set ...</button>
 			</div>
 
 			<div class="loadingImage"><img src="/img/ajax-loader.gif" /></div>
