--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ redirect_from: "/about/"
 <section class="boxed">
 
 	<h1 id="about-me" class="text-align-center">
-		Hi, I'm <a href="http://www.linkedin.com/profile/view?id=67596050" target="_blank">Marc</a>, a freelance C# developer, computer security analyst and infrastructure specialist based in <a href="http://maps.google.co.uk/maps?q=Wales">Wales, UK</a>.<!--<br /><strike>I am available for hire</strike>.-->
+		Hi, I'm <a href="https://www.linkedin.com/in/marc-barry-10277a1a" target="_blank">Marc</a>, a freelance C# developer, computer security analyst and infrastructure specialist based in <a href="http://maps.google.co.uk/maps?q=Wales">Wales, UK</a>.<!--<br /><strike>I am available for hire</strike>.-->
 	</h1>
 
 	<hr />
@@ -55,7 +55,7 @@ redirect_from: "/about/"
 	<h2>CV</h2>
 	<p>Available on request.</p>
 
+	<h2>Linkedin</h2>
+	<p><a href="https://www.linkedin.com/in/marc-barry-10277a1a" target="_blank">https://www.linkedin.com/in/marc-barry-10277a1a</a></p>
+	
 </section>
-
-
-
