--- a/writing.html
+++ b/writing.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Tech Writing — Pingfu
-breadcrumb: Tech Writing
+title: Tech writing — Pingfu
+breadcrumb: Tech writing
 ---
 
 
