renamed open-source page

--- a/open-source.html
+++ b/open-source.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: Open Source — Pingfu
-breadcrumb: Open Source
+title: Code — Pingfu
+breadcrumb: Code
+redirect_from: "/open-source/"
 ---
 
 <section class="boxed">
