renamed open-source page

--- a/code.html
+++ b/code.html
@@ -7,9 +7,9 @@ redirect_from: "/open-source/"
 
 <section class="boxed">
 
-	<h1>Open source</h1>
+	<h1>Code</h1>
 	
-	<p>A few home grown tools.</p>
+	<p>A small collection of scripts and projects which I maintain.</p>
 
 	<ul class="tools">
 	
@@ -52,9 +52,9 @@ redirect_from: "/open-source/"
 
 <section class="boxed">
 
-	<h1>Open source - third party</h1>
+	<h1>Discover</h1>
 
-	<p>A few perhaps less well known, but exceptional projects I've had the pleasure of discovering.</p>
+	<p>I keep a list of, arguably less well-known, projects of exceptional quality I've discovered.</p>
 
 	<ul class="tools">
 	
