--- a/index.html
+++ b/index.html
@@ -9,34 +9,14 @@ redirect_from: "/writing/"
 <section class="boxed">
 
 	<h1 id="about-me" class="text-align-center">
-		Hi, I'm <a href="https://www.linkedin.com/in/marc-barry-10277a1a" target="_blank">Marc</a>, a freelance C# developer, computer security analyst and infrastructure specialist based in <a href="http://maps.google.co.uk/maps?q=Wales">Wales, UK</a>.<!--<br /><strike>I am available for hire</strike>.-->
+		Hi, I'm <a href="./about" target="_blank">Marc</a>, a freelance C# developer, computer security analyst and infrastructure specialist based in Wales, UK.
 	</h1>
 
 	<hr />
-
-	<h2>I can help with</h2>
-	<br />
 	
-	<ul>
-		<li>C# software development, code review, performance optimisation and security penetration testing.</li>
-		<li>Security incident detection, handling, response and recovery, policy, assurance, accreditation and compliance. (ISO27001 &amp; PCI)</li>
-		<li>Applied cryptography, best practice deployment, ECDHE, PKCS and PKI trust frameworks, real-world testing, implementation and validation.</li>
-		<li>Enterprise and n-tier or SOA architectures, api design, data storage strategies and horizontally scalable infrastructure.</li>
-		<li>Backend infrastructure stacks, automation, devops and sysops culture and tooling.</li>
-		<li>Voice over IP system planning, deployment and debugging (SIP &amp; IAX / Asterisk).</li>
-		<li>Modern front end javascript frameworks and responsive-design.</li>
-		<li>Technical document writing.</li>
-	</ul>
+	<h2>Writing</h2>
 
-</section>
-
-
-
-<section class="boxed">
-
-	<h1>{{ page.breadcrumb }}</h1>
-
-	<p>A collection of thoughts on technology; programming, performance, infrastructure and cyber.</p>
+	<p>Welcome to pingfu.net, a small collection of my thoughts on technology; programming, performance, infrastructure and cyber.</p>
 	<br />
 
 	<ul class="posts">
