hero image shuffle

--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@ breadcrumb: About
 
 <section class="boxed">
 
+	<div id="logo"><img src="/img/pingfu.png" alt="Pingfu"></div>
+  
 	<h1 id="about-me" class="text-align-center">
 		Hi, I'm <a href="https://www.linkedin.com/in/marc-barry-10277a1a" target="_blank">Marc</a>, a freelance C# developer, computer security analyst and infrastructure specialist based in <a href="http://maps.google.co.uk/maps?q=Wales">Wales, UK</a>.<!--<br /><strike>I am available for hire</strike>.-->
 	</h1>
