trimmed more fat from index.html

--- a/index.html
+++ b/index.html
@@ -8,15 +8,9 @@ redirect_from: "/writing/"
 
 <section class="boxed">
 
-	<h1 id="about-me" class="text-align-center">
-		Hi, I'm <a href="./about" target="_blank">Marc</a>, a freelance C# developer, computer security analyst and infrastructure specialist based in Wales, UK.
-	</h1>
+	<h1>Tech Writing</h1>
 
-	<hr />
-	
-	<h2>Writing</h2>
-
-	<p>Welcome to pingfu.net, a small collection of my thoughts on technology; programming, performance, infrastructure and cyber.</p>
+	<p>Hi, I'm <a href="/about">Marc</a>. Welcome to pingfu.net, a small collection of my thoughts on technology; programming, performance, infrastructure and cyber.</p>
 	<br />
 
 	<ul class="posts">
