--- a/code.html
+++ b/code.html
@@ -54,7 +54,7 @@ redirect_from: "/open-source/"
 
 	<h1>Discover</h1>
 
-	<p>I keep a list of, arguably less well-known, projects of exceptional quality I've discovered.</p>
+	<p>I keep a list of, arguably less well-known, projects of exceptional quality I've discovered (usually) during their formative stages and listed here for future reference.</p>
 
 	<ul class="tools">
 	
