--- a/code.html
+++ b/code.html
@@ -59,6 +59,16 @@ redirect_from: "/open-source/"
 	<ul class="tools">
 	
 		<li>
+			<h2><a target="_blank" href="http://hangfire.io/">hangfire.io</a></h2>
+			<p>An embeddable c# library which provides an easy, reliable and flexible interface to manage and perform background task processing, without Windows Service or separate process.</p>
+		</li>
+	
+		<li>
+			<h2><a target="_blank" href="https://github.com/open-guides/og-aws">Amazon Web Services — a practical guide</a></h2>
+			<p>A direct, trustworthy and practical guide for engineers who use the AWS stack, with tips, gotchas, information and recommendations.</p>
+		</li>
+	
+		<li>
 			<h2><a target="_blank" href="http://12factor.net/">The Tewlve-Factor App</a></h2>
 			<p>A simple methodology for building software-as-a-service apps.</p>
 		</li>
