--- a/about.html
+++ b/about.html
@@ -57,6 +57,6 @@ breadcrumb: About
 	<p>Available on request.</p>
 
 	<h2>Linkedin</h2>
-	<p><a href="https://www.linkedin.com/in/marc-barry-10277a1a" target="_blank">https://www.linkedin.com/in/marc-barry-10277a1a</a></p>
+	<p><a href="https://www.linkedin.com/in/marc-barry" target="_blank">https://www.linkedin.com/in/marc-barry</a></p>
 	
 </section>
