lots of updates

--- a/code.html
+++ b/code.html
@@ -9,24 +9,24 @@ redirect_from: "/open-source/"
 
 	<h1>Code</h1>
 	
-	<p>A small collection of scripts and projects which I maintain.</p>
+	<p>A small collection of scripts and projects I maintain.</p>
 
 	<ul class="tools">
 	
+			<li>
+					<h2>
+						<a target="_blank" href="https://ci.appveyor.com/project/Pingfu/r53export"><img style="vertical-align: sub;" src="https://ci.appveyor.com/api/projects/status/github/Pingfu/r53export?branch=master&svg=true" alt="Build Status"></a> 
+						<a target="_blank" href="https://github.com/pingfu/r53export/">Amazon Route53 data export</a>
+					</h2>
+					<p>A simple command-line tool to easily export zone information from Route53. Periodically snapshot, or backup data from <strong>all</strong> hosted zones.</p>
+				</li>
+				
 		<li>
 			<h2>
 				<a target="_blank" href="https://ci.appveyor.com/project/Pingfu/blockchainsharp"><img style="vertical-align: sub;" src="https://ci.appveyor.com/api/projects/status/github/Pingfu/blockchainsharp?branch=master&svg=true" alt="Build Status"></a> 
 				<a target="_blank" href="https://github.com/pingfu/blockchainsharp">Bitcoin block chain parser</a>
 			</h2>
 			<p>A pure C# block chain parser library for Bitcoin. It eats binary blkxxxx.dat files and produces an IEnumerable strongly typed in-memory representation.</p>
-		</li>
-		
-		<li>
-			<h2>
-				<a target="_blank" href="https://ci.appveyor.com/project/Pingfu/r53export"><img style="vertical-align: sub;" src="https://ci.appveyor.com/api/projects/status/github/Pingfu/r53export?branch=master&svg=true" alt="Build Status"></a> 
-				<a target="_blank" href="https://github.com/pingfu/r53export/">Amazon Route53 data export</a>
-			</h2>
-			<p>A simple tool to easily export information from Route53. Periodically snapshot, or backup DNS data from ALL hosted zones.</p>
 		</li>
 		
 		<li>
@@ -54,7 +54,7 @@ redirect_from: "/open-source/"
 
 	<h1>Discover</h1>
 
-	<p>I keep a list of, arguably less well-known, projects of exceptional quality I've discovered (usually) during their formative stages, listed here for future reference.</p>
+	<p>I keep a list of (arguably less well-known) projects of exceptional quality I've usually discovered during their formative stages, listed here for future reference.</p>
 
 	<ul class="tools">
 	
